[FIX] (IE-only) Turns off flexbox in the main banner to avoid layout misalignment. (Safari-only) Picture's media breakpoints turn into px to avoid inconsistencies between CSS and HTML.

--- a/src/assets/toolkit/styles/5-objects/_objects.icons.scss
+++ b/src/assets/toolkit/styles/5-objects/_objects.icons.scss
@@ -115,7 +115,7 @@ $icon-play-triangle-ratio: 1.1; // Ratio between width and height of the triangl
 
 .link-restricted {
   @include extend-icon-after( lock ) {
-    vertical-align: 0;
+    vertical-align: 7.5%;
     margin-left: _em( $gap-small );
     text-decoration: none !important;
   }
